syntax = "proto3";
/*
protoc --go_out=proto/pb/ --go_opt=paths=source_relative \
        --go-grpc_out=proto/pb/ --go-grpc_opt=paths=source_relative \
        proto/asr.proto
*/

package asr;
option go_package = "github.com/mathiasXie/gin-web/applications/asr-rpc/proto";

// ASR服务定义
service ASRService {
    // 语音转文本
    rpc SpeechToText (SpeechToTextRequest) returns (SpeechToTextResponse) {}

}
enum Provider {
  VOSK = 0;
  ALIYUN = 1;
}

// 语音转文本请求
message SpeechToTextRequest  {
  Provider provider = 1;    // 提供商
  bytes audio_data = 2;     // 音频数据
  string format = 3;        // 音频格式，如 mp3, wav
  int32 sample_rate = 4;    // 采样率
  int32 channels = 5;       // 声道数
} 

// 语音转文本响应
message SpeechToTextResponse {
  string text = 1;           // 要转换的文本
} 